fixing header alignment and bg

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,12 +1,13 @@
 .header{
   display: flex;
   height: 60px;
-  justify-content: end;
   align-items: center;
-  background-color: transparent;
-  padding: 8px 48px;
+  background-color: rgba(41, 91, 128, .3);
+  width: 98%;
   z-index: 2;
-
+  position: fixed;
+  justify-content:right;
+  padding-right: 16px;
 }
 
 .header a{
@@ -30,6 +31,7 @@
   font-size: 16px;
   border: 1px greenyellow solid;
   padding: 4px;
+  margin: 4px;
   align-self: center;
   transition: 1s;
   text-align: center;
